<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTerm"
    android:background="@color/wgu_blue"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/edit_term_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backBtnPressed"
            android:padding="5dp"
            android:src="@drawable/arrow_back_white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/view_term"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_term_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_term_title"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/info"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:maxLength="12" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_start_date"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/muli"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/add_term_date_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_date_error"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:fontFamily="@font/muli"
                android:layout_marginTop="20dp"/>

            <DatePicker
                android:id="@+id/edit_term_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:calendarTextColor="@color/white"
                android:theme="@style/MyDatePicker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_end_date"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/muli"
                android:layout_marginTop="20dp"/>

            <DatePicker
                android:id="@+id/edit_term_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:calendarTextColor="@color/white"
                android:theme="@style/MyDatePicker"/>



            <Button
                android:id="@+id/edit_term_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_white"
                android:onClick="editTerm"
                android:text="@string/edit_term"
                android:textColor="@color/wgu_blue" />

            <Button
                android:id="@+id/delete_term_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_red"
                android:onClick="deleteTerm"
                android:text="@string/delete_term"
                android:textColor="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/edit_term_course_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/courses"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/edit_term_no_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:padding="10dp"
            android:text="@string/nothing_to_display"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="24sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/edit_term_course_recyclerview"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="match_parent"/>

    </LinearLayout>


</ScrollView>