<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditCourse"
    android:background="@color/wgu_blue"
    android:padding="30dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/edit_course_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="backBtnPressed"
                android:padding="5dp"
                android:src="@drawable/arrow_back_white" />

            <ImageView
                android:id="@+id/edit_course_notif_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:onClick="createNotification"
                android:padding="5dp"
                android:src="@drawable/bell_plus"/>

        </RelativeLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/course_detail"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_course_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_course_title"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/info"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                android:enabled="false" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:maxLength="12"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_course_instructor_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_course_instructor_name"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/info"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                android:enabled="false" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:maxLength="12"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_course_instructor_phone_number_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_course_instructor_phone"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/phone"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="phone"
                    android:maxLength="12"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_course_instructor_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_course_instructor_email"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/mail"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white"
                android:enabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_course_select_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_status"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:endIconTint="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/edit_course_auto_complete_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_course_select_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_term"
                app:hintTextColor="@color/white"
                android:textColorHint="@color/white"
                app:endIconTint="@color/white"
                app:boxStrokeColor="@color/white"
                android:layout_marginTop="5dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/edit_course_auto_complete_term"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:focusable="false"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_start_date"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/muli"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/edit_course_date_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_date_error"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:fontFamily="@font/muli"
                android:layout_marginTop="20dp"/>

            <DatePicker
                android:id="@+id/edit_course_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:calendarTextColor="@color/white"
                android:theme="@style/MyDatePicker"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_end_date"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/muli"
                android:layout_marginTop="20dp"/>

            <DatePicker
                android:id="@+id/edit_course_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:calendarTextColor="@color/white"
                android:theme="@style/MyDatePicker"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_course_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_course_note"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="textMultiLine"
                    android:lines="6"
                    android:gravity="top"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/edit_course_share_btn_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_blue"
                android:onClick="shareNoteEmail"
                android:text="@string/share_course_notes_email"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/edit_course_share_btn_sms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_blue"
                android:onClick="shareNoteSms"
                android:text="@string/share_course_notes_sms"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/edit_course_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_white"
                android:onClick="editCourse"
                android:text="@string/edit_course"
                android:textColor="@color/wgu_blue" />

            <Button
                android:id="@+id/edit_course_delete_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_red"
                android:onClick="deleteCourse"
                android:text="@string/delete_course"
                android:textColor="@color/wgu_blue" />

        </LinearLayout>

        <TextView
            android:id="@+id/edit_course_assessment_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="@string/assessments"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/edit_course_no_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:padding="10dp"
            android:text="@string/nothing_to_display"
            android:textAllCaps="true"
            android:textColor="@color/red"
            android:textSize="24sp" />


        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/edit_course_asessment_recyclerview"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_height="match_parent"/>

    </LinearLayout>


</ScrollView>