<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/wgu_blue"
    android:padding="30dp"
    tools:context=".LogInScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/login_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="backBtnPressed"
            android:padding="5dp"
            android:src="@drawable/arrow_back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="40sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="80dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_username"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/user"
                app:startIconTint="@color/white"
                app:endIconMode="clear_text"
                app:endIconTint="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="text"
                    android:maxLength="12" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/enter_password"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white"
                app:boxStrokeWidthFocused="2dp"
                app:startIconDrawable="@drawable/lock"
                app:startIconTint="@color/white"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/white"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/muli"
                    android:textColor="@color/white"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>
            
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                    android:text="@string/remember_me"
                    android:textColor="@color/white"
                    android:layout_centerVertical="true"
                    android:buttonTint="@color/white"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:background="#00000000"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"/>


            </RelativeLayout>

            <Button
                android:id="@+id/login_attempt_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_white"
                android:onClick="authenticateUser"
                android:text="@string/login"
                android:textColor="@color/wgu_blue" />

            <Button
                android:id="@+id/create_account_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="#00000000"
                android:onClick="launchSignUpScreen"
                android:text="@string/dont_have_account"
                android:textColor="@color/white" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>